# Microsoft-Agents-League-hackathon

./: .gitignore  README.MD  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
assets/widgets/: host.html  runtime.js
public/: wallpaper.html
src/: App.tsx  globals.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  widgets.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: discord_rpc.rs  mod.rs  plugins.rs
src-tauri/src/core/ai/: generator.rs
src-tauri/src/core/ipc/: channel.rs  mod.rs  protocol.rs
src-tauri/src/core/lifecycle/: mod.rs  readiness.rs  shutdown.rs  startup.rs
src-tauri/src/core/player/: app_management.rs  download.rs  manager.rs  mod.rs  state.rs
src-tauri/src/data/: mod.rs
src-tauri/src/data/models/: collection.rs  interactive.rs  mod.rs  responses.rs  settings.rs  tags.rs  wallpaper.rs  widget.rs
src-tauri/src/data/scrapers/: desktophut.rs  konachan.rs  mod.rs  moewalls.rs  motionbgs.rs  utils.rs  wallhaven.rs  wallpaper_archive.rs  wallpaper_archive_laxentainc.rs  wallpaperflare.rs  wallpapers_com.rs  wallpapersclan.rs  wallpaperwaifu.rs
src-tauri/src/data/storage/: collection.rs  mod.rs  paths.rs  tag_cache.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/windows/: engine.rs  mod.rs
src-tauri/src/platform/windows/desktop/: a.MD  mod.rs
src-tauri/src/platform/windows/interactive/: audio.rs  diagnostics.rs  helpers.rs  import.rs  media.rs  mod.rs  mouse.rs  player.rs  scanner.rs  state.rs  system.rs  watchdog.rs  widget_host.rs  widgets.rs
src-tauri/src/platform/windows/os/: README.md  mod.rs  monitors.rs  os_version.rs  shell_int.rs  taskbar.rs  widget_shell.rs  window.rs  windows_startup.rs
src-tauri/src/ui/: mod.rs
src-tauri/src/ui/commands/: ai_ops.rs  cache_ops.rs  homepage_ops.rs  interactive_ops.rs  local_wallpaper_ops.rs  mod.rs  mpv_setup.rs  search_ops.rs  settings_ops.rs  system_info.rs  taskbar_ops.rs  user_library.rs  vibrancy_ops.rs  video_ops.rs  wallpaper_ops.rs  widget_ops.rs
src-tauri/src/utils/: mod.rs
src/components/: AIGeneratorModal.tsx  AIWidgetGeneratorModal.tsx  ContextMenu.tsx  DesktopPageHeader.tsx  Greeting.tsx  Hyperspeed.tsx  ImageModal.tsx  InteractivePropertiesPanel.tsx  InteractiveWallpaperCard.tsx  InteractiveWidgetEditor.tsx  LaxentaLogo.tsx  LazySection.tsx  LoadingScreen.tsx  LoadingState.tsx  MonitorLayout.tsx  (+13 more)
(+64 files in other folders)
